compiler-project/tests/lexer/invalid/test_invalid_number.src
fn main() {
    int x = 42a;  // letters in number
    float y = 3.14.15;  // multiple dots
    return 0;
}